feat: Implemented findEventById endpoint
